[TestSuite] add customer test
